[package]
name = "tfrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tensorflow = "0.17.0"
tflite = "0.9.6"
polars = "0.18.0"
confy = "0.4"
serde_json = "1.0.59"
serde_derive = "1.0.131"
serde = "1.0.131"
restson = { version = "1.0.0", features = ["blocking"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"